# nodalpulse-services

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  bootstrap_pjm_filings.py  check_diagnose.py  check_salience.py  main.py  nixpacks.toml  pyproject.toml  ruff.toml  triage_spotcheck.py  verify_pjm_beta.py
.github/workflows/: ci.yml
scripts/: apply_schema.py  apply_services_schema.py  apply_sql.py  backfill_filings_docket_id.py  check_llm_calls.py  list_tables.py  phase17_discover.py  probe_state_puc.py  query.py  scrape_puct_commenters.py  validate_golden.py
sql/: add_cpuc_source.sql  add_discovery_themes.sql  add_docket_watched_flag.sql  add_idempotency_key.sql  add_leads.sql  add_llm_calls.sql  add_llm_calls_conversation_id.sql  add_llm_calls_source.sql  add_market_events.sql  add_market_salience.sql  add_scheduler_daily_runs.sql  backfill_docket_titles.sql  backfill_puct_filer.sql  services_schema.sql
src/nodalpulse/: cron.py  saved_search_predicate.py  settings.py  worker.py  zone_lookup.py
tests/: test_admin_llm_costs.py  test_allocate_brief.py  test_api_recompose.py  test_api_refresh_extraction.py  test_cache_boundaries.py  test_caiso_parser.py  test_classify_discovery.py  test_compose_brief_filters.py  test_cron.py  test_imm_adapter.py  test_llm_tracked.py  test_market_brief.py  test_mdpsc_adapter.py  test_njbpu_adapter.py  test_phase17_protections.py  test_phase18_on_demand.py  test_phase19_docket_linkage.py  test_puct_crawler.py  test_queue.py  test_vascc_adapter.py  test_zip_extraction.py
tests/golden/: ercot_mn.txt  (+2 more)
(+53 files in other folders)
