[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodalpulse"]

[project]
name = "nodalpulse-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "asyncpg>=0.31.0",
    "boto3>=1.43.6",
    "fastapi>=0.136.1",
    "certifi>=2024.1.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "playwright>=1.59.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.10.2",
    "selectolax>=0.4.8",
    "sqlalchemy>=2.0.49",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
